-Added a second section to the website -Contain images holders&text under

--- a/index.html
+++ b/index.html
@@ -28,5 +28,18 @@
   <div class="random-info">
     <h2>Some random information</h2>
   </div>
+  <div class="subtext-pic">
+    <p class="imgs-hol"></p>
+    <p class="imgs-hol"></p>
+    <p class="imgs-hol"></p>
+    <p class="imgs-hol"></p>
+  </div>
+  <div class="subtext">
+    <p class="subtext-text">this is some subtext under an illustration or image</p>
+    <p class="subtext-text">this is some subtext under an illustration or image</p>
+    <p class="subtext-text">this is some subtext under an illustration or image</p>
+    <p class="subtext-text">this is some subtext under an illustration or image</p>
+
+  </div>
 </body>
 </html>
