--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <p class="subtext-text">this is some subtext under an illustration or image</p>
   </div>
   <div class="quote-container">
-    <p class="quote">This is an inspiring, or a testimonial from a customer. Mayber it's just failling up space, or maybe people will actually read it. Who Knows? All i know is that it looks nice.</p>
+    <div class="inside-quote">
+      <p class="quote">This is an inspiring, or a testimonial from a customer. Mayber it's just failling up space, or maybe people will actually read it. Who Knows? All i know is that it looks nice.</p>
+      <p class="credit">-Thor, God of Thunder</p>
+    </div>
   </div>
 </body>
 </html>
