-Added the final touch.

--- a/index.html
+++ b/index.html
@@ -46,5 +46,21 @@
       <p class="credit">-Thor, God of Thunder</p>
     </div>
   </div>
+  <div class="empty-container">
+    <div class="bottom-container">
+      <div class="bot-text">
+        <p>Call to action</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <div class="bot-button">
+        <button class="signup">Sign up</button>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="copy-right">
+      <p>Copyright © The Odin Project 2021</p>
+    </div>
+  </footer>
 </body>
 </html>
